--- a/gtk-3.0/scss/widgets/_scrollbar.scss
+++ b/gtk-3.0/scss/widgets/_scrollbar.scss
@@ -3,61 +3,84 @@
 ************/
 
 @include exports("scrollbar") {
-	* {
-		-GtkRange-slider-width: 8;
-		-GtkRange-stepper-spacing: 0;
-		-GtkRange-trough-border: $spacing;
-		-GtkRange-trough-under-steppers: 1;
-		-GtkScrollbar-has-backward-stepper: false;
-		-GtkScrollbar-has-forward-stepper: false;
-		-GtkScrollbar-min-slider-length: 80;
-		-GtkScrolledWindow-scrollbar-spacing: 0;
-		-GtkScrolledWindow-scrollbars-within-bevel: 1;
-	}
+    * {
+        -GtkRange-slider-width: 8;
+        -GtkRange-stepper-spacing: 0;
+        -GtkRange-trough-border: 2;
+        -GtkRange-trough-under-steppers: 1;
+        -GtkScrollbar-has-backward-stepper: false;
+        -GtkScrollbar-has-forward-stepper: false;
+        -GtkScrollbar-min-slider-length: 80;
+        -GtkScrolledWindow-scrollbar-spacing: 0;
+        -GtkScrolledWindow-scrollbars-within-bevel: 1;
+    }
 
-	.scrollbar {
-		border: none;
-		padding: 0;
+    .scrollbar {
+        border: 0;
+        padding: 0;
 
-		&.button {
-			&, &:active, &:active:hover {
-				border-width: 0;
-				border-radius: 0;
-				background-color: transparent;
-				background-image: none;
-				color: shade($bg_color, 0.6);
-			}
-		}
+        &.button {
+            &, &:active, &:active:hover {
+                border-width: 0;
+                border-radius: 0;
+                background-color: transparent;
+                background-image: none;
+                color: alpha($fg_color, 0.5);
+            }
+        }
 
-		&.slider, &.slider.vertical {
-			border: none;
-			border-radius: $roundness;
-			background-color: mix($bg_color, $fg_color, 0.21);
+        &.slider, &.slider.vertical {
+            border: 0;
+            border-radius: $roundness;
+            background-color: shade($bg_color, 0.5);
 
-			&:hover { background-color: $selected_bg_color; }
+            &:hover { background-color: shade($bg_color, 0.3); }
 
-			&:active { background-color: shade($selected_bg_color, .9); }
+            &:active { background-color: $selected_bg_color; }
 
-			&.fine-tune:prelight:active { border: 2px solid transparent; }
-		}
-	}
+            &.fine-tune:prelight:active { border: 2px solid transparent; }
+        }
 
-	.scrollbars-junction,
-	.scrollbar.trough {
-		border: none;
-		border-radius: 0;
-		background-color: $bg_color;
-		background-image: none;
-	}
+        // overlay scrolling indicator
+        &.overlay-indicator {
+            &:not(.dragging):not(.hovering) {
+                opacity: 0.5;
 
-	/* overlay scrollbar */
-	OsThumb, OsScrollbar {
-		color: shade($bg_color, 0.7);
+                -GtkRange-slider-width: 4px;
 
-		&:selected { background-color: $selected_bg_color; }
+                .slider {
+                    margin: 0;
+                    background-color: $fg_color;
+                    background-clip: padding-box;
+                }
 
-		&:active { background-color: $selected_bg_color; }
+                .trough {
+                    border-style: none;
+                    background-color: transparent;
+                }
+            }
 
-		&:insensitive { background-color: shade($bg_color, 0.9); }
-	}
+            &.dragging, &.hovering { opacity: 0.7; }
+        }
+    }
+
+    .scrollbars-junction,
+    .scrollbars-junction.frame,
+    .scrollbar.trough {
+        border: 0;
+        border-radius: 0;
+        background-color: $bg_color;
+        background-image: none;
+    }
+
+    // ubuntu overlay scrollbars
+    OsThumb, OsScrollbar {
+        color: shade($bg_color, 0.7);
+
+        &:selected { background-color: $selected_bg_color; }
+
+        &:active { background-color: $selected_bg_color; }
+
+        &:insensitive { background-color: shade($bg_color, 0.9); }
+    }
 }
